# rust_diesel_rocket_example

./: .env  Cargo.toml  README.md
src/: lib.rs  main.rs  schema.rs
src/people/: handlers.rs  mod.rs  repository.rs  router.rs
